<resources>
    <string name="app_name">Football Tables</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="premier_league">Premier League</string>
    <string name="championship">Football League Championship</string>
    <string name="shrtchampionship">Championship</string>
    <string name="eredvise">Eredvise</string>
    <string name="ligue1">Ligue 1</string>
    <string name="ligue2">Ligue 2</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="secbundesliga">2. Bundesliga</string>
    <string name="spanishleague">Primera División</string>
    <string name="seria_A">Serie A</string>
    <string name="seria_B">Serie B</string>
    <string name="brazilleague">Brasileirão</string>
    <string name="portugeseleague">Primeira Liga</string>
    <string name="error">Sorry, we were unable to get data from the server.
        \nBUT\n Like good athletes, we will never give up. Try us again!</string>
    <string name="kickit">Kick it again player!</string>
    <string name="nevergiveup">See? Never give up!</string>
    <string name="ad_id">ca-app-pub-3046903934801639/2092473541</string>
</resources>
