<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="com.example.shaytsabar.footballtables.fragments.ChooseLeagueFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/ligue1_btn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:background="#9bdbc7"
                android:drawableRight="@drawable/flagfrance"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/ligue1"
                android:textAlignment="center"
                android:textColor="#191917"
                app:layout_constraintLeft_toLeftOf="@+id/bundesliga2_btn"
                app:layout_constraintTop_toBottomOf="@+id/bundesliga2_btn" />

            <Button
                android:id="@+id/ligue2_btn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:background="#9bdbc7"
                android:drawableRight="@drawable/flagfrance"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/ligue2"
                android:textAlignment="center"
                android:textColor="#191917"
                app:layout_constraintLeft_toLeftOf="@+id/ligue1_btn"
                app:layout_constraintTop_toBottomOf="@+id/ligue1_btn" />

            <Button
                android:id="@+id/eredvise_btn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:background="#9bdbc7"
                android:drawableRight="@drawable/flagnetherlands"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/eredvise"
                android:textAlignment="center"
                android:textColor="#191917"
                app:layout_constraintLeft_toLeftOf="@+id/seriab_btn"
                app:layout_constraintTop_toBottomOf="@+id/seriab_btn" />

            <Button
                android:id="@+id/seriaa_btn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:background="#9bdbc7"
                android:drawableRight="@drawable/flagitaly"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/seria_A"

                android:textAlignment="center"
                android:textColor="#191917"
                app:layout_constraintLeft_toLeftOf="@+id/spanish_btn"
                app:layout_constraintTop_toBottomOf="@+id/spanish_btn" />

            <Button
                android:id="@+id/seriab_btn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:background="#9bdbc7"
                android:drawableRight="@drawable/flagitaly"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/seria_B"
                android:textAlignment="center"
                android:textColor="#191917"
                app:layout_constraintLeft_toLeftOf="@+id/seriaa_btn"
                app:layout_constraintTop_toBottomOf="@+id/seriaa_btn" />

            <Button
                android:id="@+id/spanish_btn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:background="#9bdbc7"
                android:drawableRight="@drawable/flagspain"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/spanishleague"
                android:textAlignment="center"
                android:textColor="#191917"
                app:layout_constraintLeft_toLeftOf="@+id/ligue2_btn"
                app:layout_constraintTop_toBottomOf="@+id/ligue2_btn" />

            <Button
                android:id="@+id/brazil_btn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:background="#9bdbc7"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/flagbrazil"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/brazilleague"
                android:textAlignment="center"
                android:textColor="#191917"
                app:layout_constraintLeft_toLeftOf="@+id/portugese_btn"
                app:layout_constraintTop_toBottomOf="@+id/portugese_btn" />

            <Button
                android:id="@+id/portugese_btn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:background="#9bdbc7"
                android:drawableRight="@drawable/flagportugal"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/portugeseleague"
                android:textAlignment="center"
                android:textColor="#191917"
                app:layout_constraintLeft_toLeftOf="@+id/eredvise_btn"
                app:layout_constraintTop_toBottomOf="@+id/eredvise_btn" />

            <Button
                android:id="@+id/bundesliga_btn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:background="#9bdbc7"
                android:drawableRight="@drawable/flaggermany"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/bundesliga"
                android:textAlignment="center"
                android:textColor="#191917"
                app:layout_constraintLeft_toLeftOf="@+id/championship_btn"
                app:layout_constraintTop_toBottomOf="@+id/championship_btn" />

            <Button
                android:id="@+id/bundesliga2_btn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:background="#9bdbc7"
                android:drawableRight="@drawable/flaggermany"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/secbundesliga"
                android:textAlignment="center"
                android:textColor="#191917"
                app:layout_constraintLeft_toLeftOf="@+id/bundesliga_btn"
                app:layout_constraintTop_toBottomOf="@+id/bundesliga_btn" />

            <Button
                android:id="@+id/championship_btn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="30dp"
                android:background="#9bdbc7"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/flagengland"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/shrtchampionship"
                android:textAlignment="center"
                android:textColor="#191917"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="@+id/premierleague_btn"
                app:layout_constraintTop_toBottomOf="@+id/premierleague_btn" />

            <Button
                android:id="@+id/premierleague_btn"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:background="#9bdbc7"
                android:drawableRight="@drawable/flagengland"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/premier_league"
                android:textAlignment="center"
                android:textColor="#191917"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>
